// $Id$

CHANGELOG file for Style Guide.

19-OCT-2010
-- README added (inadarei) and proofread (agentrickard).
-- Adds group options to the API, cleaning the interface.
-- Updates API documentation.
-- Adds RTL css support.
-- Fixes RTL file. Adds more padding on items.

06-OCT-2010
-- Adds hook_system_theme_page_alter().
-- Adds new test items.

05-OCT-2010
-- Initial commit.