@@ -6,14 +6,20 @@ h2.styleguide {
   font-size: 16px;
   text-transform: uppercase;
   color: #ccc;
-  margin: 3em 0 0.25em 0;
+  margin: 2em 0 0.25em 0;
   padding: 0;
 }
 
 div.styleguide {
   border-top: 1px solid #ccc;
-  margin: 0em 0 2em 0;
+  border-bottom: 1px solid #ccc;
   padding: 0;
+}
+
+#styleguide-header {
+  border: 1px solid #ccc;
+  padding 0.25em;
+  background-color: #fafafa;
 }
 
 #styleguide-header .item-list {
@@ -34,4 +40,11 @@ div.styleguide {
 #styleguide-header .break {
   margin-bottom: 1em;
   clear: both;
+}
+
+.styleguide-description {
+  font-family: helvetica, arial, sans-serif;
+  font-size: 12px;
+  color: #aaa;
+  margin: 0;
 }
