@@ -70,6 +70,16 @@ function styleguide_styleguide() {
       'variables' => array('path' => styleguide_image('vertical'), 'alt' => t('My image'), 'title' => t('My image')),
       'group' => 'Media',
     ),
+    'image-inset-horizontal' => array(
+      'title' => 'Image, horizontal, within text',
+      'content' => styleguide_paragraph(1) . theme('image', array('path' => styleguide_image('horizontal'), 'alt' => t('My image'), 'title' => t('My image'))) . styleguide_paragraph(2),
+      'group' => 'Media',
+    ),
+    'image-inset-vertical' => array(
+      'title' => 'Image, vertical, within text',
+      'content' => styleguide_paragraph(1) . theme('image', array('path' => styleguide_image('vertical'), 'alt' => t('My image'), 'title' => t('My image'))) . styleguide_paragraph(2),
+      'group' => 'Media',
+    ),
   );
   $content = '';
   for ($i = 1; $i <=6; $i++) {
@@ -96,10 +106,66 @@ function styleguide_styleguide() {
       'content' => '<div class="messages ' . $message . '"><h2 class="element-invisible">Status message</h2>' . styleguide_sentence() . '</div>',
     );
   }
+  // Form elements.
+  $fake = $form_state = array();
+  $elements = styleguide_form($fake, $form_state);
+  $basic = array();
+  $fieldsets = array();
+  $tabs = array();
+  $markup = array();
+  foreach (element_children($elements) as $key) {
+    if (!isset($elements[$key]['#type']) || $elements[$key]['#type'] == 'item') {
+      $markup[] = $key;
+    }
+    elseif ($elements[$key]['#type'] == 'fieldset') {
+      $fieldsets[] = $key;
+    }
+    elseif ($key == 'vertical_tabs') {
+      $tabs[] = $key;
+    }
+    // We skip these.
+    elseif (in_array($elements[$key]['#type'], array('button', 'submit', 'image_button'))) {
+      $buttons[] = $key;
+    }
+    else {
+      $basic[] = $key;
+    }
+  }
   $items['form'] = array(
-    'title' => 'Forms',
-    'content' => drupal_render(drupal_get_form('styleguide_form')),
+    'title' => 'Forms, basic',
+    'content' => drupal_render(drupal_get_form('styleguide_form', $basic)),
     'group' => 'Forms',
   );
+  $items['form-submit'] = array(
+    'title' => 'Forms, submit',
+    'content' => drupal_render(drupal_get_form('styleguide_form', array('submit'))),
+    'group' => 'Forms',
+  );
+  $items['form-button'] = array(
+    'title' => 'Forms, button',
+    'content' => drupal_render(drupal_get_form('styleguide_form', array('button'))),
+    'group' => 'Forms',
+  );
+  $items['form-image-button'] = array(
+    'title' => 'Forms, image button',
+    'content' => drupal_render(drupal_get_form('styleguide_form', array('image_button'))),
+    'group' => 'Forms',
+  );
+  $items['form-markup'] = array(
+    'title' => 'Forms, markup',
+    'content' => drupal_render(drupal_get_form('styleguide_form', $markup)),
+    'group' => 'Forms',
+  );
+  $items['form-fieldsets'] = array(
+    'title' => 'Forms, fieldsets',
+    'content' => drupal_render(drupal_get_form('styleguide_form', $fieldsets)),
+    'group' => 'Forms',
+  );
+  $items['form-vertical-tabs'] = array(
+    'title' => 'Forms, vertical tabs',
+    'content' => drupal_render(drupal_get_form('styleguide_form', $tabs)),
+    'group' => 'Forms',
+  );
+
   return $items;
 }
